<resources>
    <string name="app_name">BEST_FOR_REST</string>
    <string name="tailand">Тайланд</string>
    <string name="philippines">Филиппины</string>
    <string name="cambodia">Камбоджа</string>
    <string name="belize">Белиз</string>
    <string name="costarika">Коста рика</string>
    <string name="title_activity_philippines">Филиппины</string>
    <string name="philippinesDescription">Есть мнение, что Филиппины, затерянное среди морей и океанов государство на семи тысячах островов (это, кстати, реальная цифра, а не поэтический эпитет), спокойно может «уесть» самые популярные направления Юго-Восточной Азии. Здесь вдоволь экзотики (как в Камбодже), вкусная кухня, развитые курорты (не хуже тайских) и головокружительные небоскребы (Гонконг, привет!) Не забываем также про прекрасный климат, удивительную флору и фауну и, конечно, роскошный дайвинг. 7107 островов, каждый из которых имеет свой туристический «характер» — от обилия дискотек и клубов до уединения на лоне природы. Прекрасный климат, удивительная живая флора и фауна, роскошные пляжи — все это Филиппины. В эту страну едут путешественники с уровнем дохода выше среднего: много молодежи, семейных пар, эко-туристов и дайверов. Нередко они приобретают комбинированные туры, предлагающие отдых на нескольких островах. Однако, увы и ах: большинству путешественников слово «Филиппины» пока мало о чем говорит. Между тем, именно в этой стране специалисты отмечают рекордное количество дайв-сайтов и серф-спотов на душу туристического населения. Но если пассивно настроенным отдыхающим такого добра и даром не надо, то шикарные (без преувеличения) белоснежные пляжи Филиппин им точно придутся по вкусу. Кроме того, отдых на Филиппинских островах радует экзотической «экскурсионкой», развитой инфраструктурой и богатым выбором отелей. Утомительный перелет, пожалуй, единственное, что даже самый оптимистичный агент никак не сможет обернуть плюсом. Зато Рождество на Филиппинах начинают праздновать 16 декабря, и продолжают до 6 января. Чем не повод взять отпуск на три недели?</string>
    <string name="tailandDescription">Изрядный туристический стаж и заслуженное реноме самого популярного направления Юго-Восточной Азии дают о себе знать: практически все, что в Таиланде можно сделать или показать туристам за деньги, там делается и показывается. С одной стороны — круто: в стране доступна целая куча самых разных вариантов отдыха с пользой и удовольствием, от секс-туров и круглосуточного «угара» в местных барах и дискотеках до дайвинга на островах и поисков просветления в древних храмах. С другой — Таиланд, где всё туристическое давным-давно поставлено на поток и на прочную коммерческую основу, уже ну никак не назовешь «экзотикой». Однако, несмотря на кажущуюся массовость и открытость направления, экзотика в Таиланде все же есть. Просто она не всегда доступна приезжающим по путевке.Тем не менее, даже те туристы, которые не смогут своими глазами увидеть проходящий в мае в городе Ясотхон экзотический и просто запредельный фестиваль ракет или принять участие в красочном шествии, организованном во время вегетарианского фестиваля на Пхукете — даже они смогут прикоснуться к экзотике. Например, узнать, что же такое не нуждающийся в представлении оздоровительный тайский массаж или по-азиатски жестокий, но потрясающе красивый тайский бокс. Кроме того, последние несколько лет Таиланд приобрел статус страны, предлагающей идеальные условия и оптимальное соотношение цена/качество для иностранцев, приезжающих в этот удивительный край для того, чтобы поправить своё здоровье.</string>
    <string name="cambodiaDescription">Трудно сказать благодаря чему наши соотечественники лучше знают Камбоджу — из-за губастой красавицы Анджелины Джоли, что рубилась с многорукими каменными демонами в роли Лары Крофт в стенах Ангкора, то ли из-за СССР, когда мы активно дружили с Кампучией, присылая ей своих специалистов и типичный советский ширпотреб в 80-х. Как бы то ни было — все мы дружно с голливудской звездой оказали не последнюю роль в развитии Камбоджи как популярного туристического направления. Судите сами: «Лара» распиарила фантастический храмовый комплекс Ангкор на весь мир так, что теперь его не знают только люди, отдаленные от ТВ. Зато Советский Союз оставил в наследство старинному королевству массу русских ресторанов, рынков и даже целый «русский город» Сиануквиль.Сегодня в Камбоджу приезжают все, кому не лень, и кто не боится приправить экзотикой традиционно роскошный азиатский отдых на море. Пляжи здесь уж точно не хуже, чем в Таиланде или Вьетнаме, но вот качество дорог, да и инфраструктура в целом немного хромают. Зато цены в этой стране такие, что любо-дорого: за 1 американский доллар можно получить изумительный 20-минутный «рыбный» педикюр или одну аппетитную жареную с имбирем лягушку.Столица — Пномпень. Популярные экскурсионные города — Сиануквиль, Сиамриап, Ангкор.Полный список городов страны ищите на странице города и курорты Камбоджи.</string>
    <string name="belizeDescription">Белиз (Belize), бывший Британский Гондурас - это государство в Центральной Америке, граничащее не севере с Мексикой, а на западе с Гватемалой. Остальная часть Белиза омывается Карибским морем. Государственное устройство - парламентская демократия Вестминстерской системы, где официальный глава государства - королева Великобритании, а управление ведет назначенный генерал-губернатор. Столица Белиза - город Бельмопан.Общая площадь страны - двадцать три тысячи квадратных километров, а население - более трехсот тысяч человек. Климат Белиза тропический, здесь дуют пассатные ветра, а температура держится на границе +26 С. Пассаты приносят осадки, и с мая по июль здесь выпадает до 3,5 тысяч мм осадков. Губительное действие для страны имеют ураганы.Основную территорию Белиза занимают низменности и равнины, а на юге - горы Майя (1122 метра над уровнем моря). Почти половину территории страны покрывают тропические леса, а юго-западную часть - хвойные и лиственные леса с зарослями мангровых деревьев. Вообще, в Белизе много ценных пород деревьев, а сосна и махагони имеет промысловое значение.Животный мир многообразен, много птиц, морские заливы богаты рыбой, здесь водястя обезьяны, черепахи, броненосцы, игуаны и ягуары.Нынешний Белиз был открыт Колумбом в 1502 году. Английская колония образовалась здесь в 1638 году, и немногие индейские племена майя мигрировали на полуостров Юкатан, в нынешнюю Мексику. Поселенцы из Англии, обосновавшиеся в Белизе, это бывшие пираты, новоявленные колонисты, привозившие себе негров-рабов на плантации и лесозаготовки. Сейчас в Белизе живут метисы (около половины всех жителей), креолы, индейцы майя и прочие национальности (китайцы, индийцы, выходцы из Европы, гарифуны).В Белизе в большинстве говорят на испанском языке и креольском, основанном на английском. Но официальный язык - английский. Две трети населения владеют грамотой, но образование в основном начальное. Религиозные концессии - католики, протестанты, сектанты (пятидесятники, адвентисты, меннониты, свидетели Иеговы и др.). Основное производство в Белизе связано с аграрным сектором, лесозаготовками и экспортом ценной древесины красного мангрового дерева и кампешевого дерева. Из Белиза импортируют смолу чикле - они используется в производстве жевательной резинки. Также Белиз экспортирует бананы, морепродукты, цитрусовые, рыбу.Почти двадцать процентов ВВП Белиза приносит туризм. Сюда приезжают для знакомства с культурой майя, памятниками древней цивилизации. Здесь интересно не только ученым-орнитологам, ботаникам, зоологам, но и дайверам, рыбакам, любителям наблюдений за ламантинами (морскими коровами), покорителям тропических дебрей. Обязательно попробуйте местный ром и буррито - кукурузные лепешки с мясом, сыром или бобами и с капустой.</string>
    <string name="costaRikaDescription">Если в Старом Свете испокон веков все дороги ведут в Рим, то в Коста-Рике все магистрали, тропы и грунтовки доставляют прямо в царство дикой природы, реликтовых лесов, грохочущих водопадов, туманных озер, что притаились на дне потухших кратеров вулканов или, как минимум, сразу в непроходимые джунгли. Это направление — «номер один» в Центральной Америке для экотуризма и приключенческих туров. Попадаешь сюда обалделый от долгого перелета и шалой жизни российских мегаполисов, уезжаешь отсюда — со слезами на глазах, царапинами на подкаченных икрах и таким зарядом энергии и сил, что самому не верится.Трудно выделить какой-то один регион или стиль отдыха в Коста-Рике: здесь завораживает все. И спокойный, что не совсем традиционно для Латинской Америки, ритм жизни, который местные называют Pura Vida («чистая жизнь»), и укромные уголки первозданного рая, затерянные где-то в дебрях национальных парков, и совершенные для серфа волны, и изумительные пляжи с такими закатами, которые даже «фотошопу» не удастся приукрасить. И все это на фоне отлично развитой инфраструктуры.Столица — Сан-Хосе (San Jose).</string>
    <string name="titleText">5 Лучших стран для отдыха</string>
    <string name="title_activity_tailand">TailandActivity</string>
    <string name="title_activity_cambodia">cambodiaActivity</string>
    <string name="title_activity_costa_rika">CostaRikaActivity</string>
    <string name="title_activity_beliz">BelizActivity</string>
</resources>
