<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.sasha.best_for_rest.MainActivity">
    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scaleType="centerCrop"
        android:contentDescription="@string/titleText"
        android:src="@drawable/main" />
    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/title_margin"
            android:gravity="center"
            android:text="@string/titleText"
            android:textColor="@color/colorTitle"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonTailand"
            style="@style/Button"
            android:layout_margin="10dp"
            android:clickable="true"
            android:text="@string/tailand" />

        <Button
            android:id="@+id/buttonPhilippines"
            style="@style/Button"
            android:text="@string/philippines" />

        <Button
            android:id="@+id/buttonCambodia"
            style="@style/Button"
            android:text="@string/cambodia" />

        <Button
            android:id="@+id/buttonBelize"
            style="@style/Button"
            android:text="@string/belize" />

        <Button
            android:id="@+id/buttonCostaRica"
            style="@style/Button"
            android:text="@string/costarika" />
    </LinearLayout>
</FrameLayout>
